修复build时的错误

--- a/src/content/blog/生活/2024.8青甘大环线游记.mdx
+++ b/src/content/blog/生活/2024.8青甘大环线游记.mdx
@@ -5,7 +5,7 @@ tags: ["旅行", "游记"]
 description: ""
 ---
 
-import Image from "../../components/Image.astro";
+import Image from "../../../components/Image.astro";
 
 &nbsp;&nbsp;&nbsp;&nbsp;2018 年 8 月自驾了一趟青海湖，那是我第一次自驾游，也是我第一次去西北，那次旅行给我留下了深刻的印象，我至今还记得那些风景，那些人，那些事。
 
